web/components/browser/Row.module.scss
.row {
    border-bottom: var(--border-style);
    display: flex;
    align-items: center;
    padding: 15px 0;
    color: var(--color-text-secondary);
    font-weight: 350;
    font-size: 0.9rem;
    min-width: 800px;
}

.row:hover {
    background-color: var(--color-background-hover);
}

.row:active {
    background-color: var(--color-background-active);
}

.row.selected {
    background-color: var(--color-row-background-selected) !important;
}

.rowElement {
    padding-left: 20px;
    white-space: nowrap;
    text-overflow: ellipsis;
    cursor: default;
    user-select: none;
    overflow: hidden;
    position: relative;
}

.nameRowElement {
    display: flex;
    padding-left: 20px;
    overflow: hidden;
    white-space: nowrap;
    user-select: none;
    position: relative;
}

.fileStem {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    flex-shrink: 1;
    min-width: 0;
}

.fileExtension {
    white-space: nowrap;
    flex-shrink: 0;
}

.fileName {
    width: calc(35% - 20px);
    padding-right: 20px;
}

.fileSize {
    width: 10%;
}

.fileType {
    width: 15%;
}

.moreOptions {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
}

.rowContainer {
    position: relative;
}

@media (max-width: 600px) {
    .row {
        min-width: 100%;
    }

    .fileName {
        width: 70%;
        font-size: 0.8rem;
    }

    .fileSize {
        display: none;
    }

    .fileType {
        display: none;
    }

    .createdAt {
        display: none;
    }

    .rowContainer {
        width: 100%;
    }

    .rowElement {
        padding-left: 10px;
    }

    .nameRowElement {
        padding-left: 10px;
    }
}

